# ffmpeg-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  testing.md
app/: __init__.py  config.py  main.py
app/middleware/: __init__.py  rate_limiter.py
app/routers/: __init__.py  captions.py  frames.py  health.py  storage.py  videos.py
app/services/: __init__.py  ffmpeg_service.py  r2_service.py
app/utils/: __init__.py  auth.py  files.py
tests/: __init__.py  test_api.py
